M rename language to languages

--- a/_posts/2015-02-13-6d-space.md
+++ b/_posts/2015-02-13-6d-space.md
@@ -5,7 +5,8 @@ title: Six-dimensional Space(6-D Space、六维空间)
 category: '游戏'
 tags: [ '6-D Space', 'Six-dimensional Space', '六维空间', '手游', 'Windows Phone', 'Cocos2d-x', 'Imagine Cup' ]
 platform: "Windows Phone 8, Windows Phone 8.1"
-language: C++ (Cocos2d-x)
+languages:
+  - C++ (Cocos2d-x)
 ---
 
 ![/img/post/WorksSample-6D-Space.jpg](/img/post/WorksSample-6D-Space.jpg)
