--- a/_posts/2015-02-13-6d-space.md
+++ b/_posts/2015-02-13-6d-space.md
@@ -4,7 +4,9 @@ section-type: post
 title: Six-dimensional Space(6-D Space、六维空间)
 category: '游戏'
 tags: [ '6-D Space', 'Six-dimensional Space', '六维空间', '手游', 'Windows Phone', 'Cocos2d-x', 'Imagine Cup' ]
-platform: "Windows Phone 8, Windows Phone 8.1"
+platform:
+  - Windows Phone 8
+  - Windows Phone 8.1
 languages:
   - C++ (Cocos2d-x)
 ---
