--- a/_posts/2015-02-13-6d-space.md
+++ b/_posts/2015-02-13-6d-space.md
@@ -9,6 +9,9 @@ platform:
   - Windows Phone 8.1
 languages:
   - C++ (Cocos2d-x)
+duties:
+  - 唯一程序员
+  - 参赛队长
 ---
 
 ![/img/post/WorksSample-6D-Space.jpg](/img/post/WorksSample-6D-Space.jpg)
@@ -18,7 +21,6 @@ languages:
 这是一款弱网络化益智类手游。2D 与 3D 世界融为一体，带来全新的游戏体验。
 
 - 时间: **2015-02-13** 至 **2015-04-07** (**当前版本1.3.1**)
-- 担任职责: **唯一程序员**
 
 # 特点
 
