M layout project, add deadline

--- a/_posts/2015-02-13-6d-space.md
+++ b/_posts/2015-02-13-6d-space.md
@@ -12,6 +12,7 @@ languages:
 duties:
   - 唯一程序员
   - 参赛队长
+deadline: 2015-04-07
 ---
 
 ![/img/post/WorksSample-6D-Space.jpg](/img/post/WorksSample-6D-Space.jpg)
@@ -19,8 +20,6 @@ duties:
 # 简介
 
 这是一款弱网络化益智类手游。2D 与 3D 世界融为一体，带来全新的游戏体验。
-
-- 时间: **2015-02-13** 至 **2015-04-07** (**当前版本1.3.1**)
 
 # 特点
 
